# lsopt

./: CMakeLists.txt  LICENSE  README.md
sandbox/: CMakeLists.txt  test_atlas.c  test_atlas_eigen.c  test_clapack.c  test_clapack_eig.c
src/: CMakeLists.txt  benchmark.c  lsopt.c  lsopt.h
